[nosetests]
verbosity=2
detailed-errors=1
with-coverage=1
cover-package=flask_error_handling
cover-erase=1
cover-xml=1
cover-html=1
cover-html-dir=htmlcov
# debug=nose.loader
# pdb=0
# pdb-failures=0

# ============
# coverage py
# ============
[coverage:run]
source=flask_error_handling

[coverage:html]
directory=htmlcov

[coverage:xml]
output=coverage.xml

[metadata]
description-file=README.md
aaf_namespace=com.att.dev.argos
